Fix M1 Ultra, M2 Ultra on Safari

--- a/src/styles/chip-frame.scss
+++ b/src/styles/chip-frame.scss
@@ -688,7 +688,7 @@
     .left-name {
       .text {
         font-size: 6.7cqw;
-        padding-top: 111.5cqw;
+        padding-top: 2cqw;
         padding-left: 2.8cqw;
         .apple-logo {
           margin-right: 0.7cqw;
@@ -990,8 +990,8 @@
     .left-name {
       .text {
         font-size: 6.7cqw;
-        padding-top: 111.5cqw;
-        padding-left: 3cqw;
+        padding-top: 2cqw;
+        padding-left: 2.8cqw;
         .apple-logo {
           margin-right: 0.7cqw;
         }
