--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -392,7 +392,7 @@ $grid-list: 'fullhd' 'fullhd' 'screen and (max-width: 2000px)',
 }
 
 @container (max-width: 700px) {
-  .chip-frame {
+  .chip-frame, .ultra-chip-frame {
     --border-separator-width: 3px;
     --border-item-width: 1px;
     --a-border-separator-width: 7px;
@@ -401,7 +401,7 @@ $grid-list: 'fullhd' 'fullhd' 'screen and (max-width: 2000px)',
   }
 }
 @container (max-width: 500px) {
-  .chip-frame {
+  .chip-frame, .ultra-chip-frame {
     --border-separator-width: 2px;
     --border-item-width: 1px;
     --a-border-separator-width: 4px;
@@ -410,7 +410,7 @@ $grid-list: 'fullhd' 'fullhd' 'screen and (max-width: 2000px)',
   }
 }
 @container (max-width: 400px) {
-  .chip-frame {
+  .chip-frame, .ultra-chip-frame {
     --border-separator-width: 1px;
     --border-item-width: 0.5px;
     --a-border-separator-width: 3px;
